# violet

./: .clang-format  .gitignore  Cargo.toml  LICENSE  ProjectViolet.sln  README.md
Violet/: .gitignore  Violet.cpp  Violet.vcxproj  Violet.vcxproj.filters  Window.cpp  Window.h
Violet/Shader/: FullScreenCS.s  FullScreenCS.s.spv  Mesh.s  Mesh.s.frag.spv  Mesh.s.vert.spv
assets/: .gitignore
assets/Box/: license.txt
assets/DamagedHelmet/: license.txt
assets/Duck/: license.txt
crates/violet/: Cargo.toml
crates/violet-app/: Cargo.toml
crates/violet-app/src/: app.rs  imgui.rs  lib.rs  render_loop.rs  window.rs
crates/violet-app/src/render_loop/: gbuffer_pass.rs  imgui_pass.rs  util_passes.rs
crates/violet-restir/: Cargo.toml
crates/violet-restir/src/: denoising.rs  main.rs  reference_path_tracer.rs  restir_render_loop.rs  restir_renderer.rs
crates/violet/src/: lib.rs  model.rs  render_graph.rs  render_scene.rs  shader.rs
crates/violet/src/render_device/: buffer.rs  core.rs  swapchain.rs  texture.rs
shader/: MeshCS.hlsl  MeshVSPS.hlsl  atmosphere_felix_westin.hlsl  blit_vsps.hlsl  brdf.hlsl  color.inc.hlsl  config.inc.hlsl  constants.hlsl  display.hlsl  enc.inc.hlsl  frame_bindings.hlsl  gbuffer.hlsl  gbuffer_lighting.hlsl  image_based_line_drawing.hlsl  imgui_vsps.hlsl  mesh_gbuffer.hlsl  pathtraced_lighting.hlsl  post_processing.hlsl  rand.hlsl  ray_test.hlsl  raytraced_shadow.hlsl  sampling.hlsl  scene_bindings.hlsl  sky_cube.hlsl  sky_vsps.hlsl  temporal_aa.hlsl  util.hlsl
shader/denoise/: relax_disocclusion_fix.hlsl  relax_fast_history_clamp.hlsl  svgf.inc.hlsl  svgf_atrous_filter.hlsl  svgf_spatial_fallback_filter.hlsl  svgf_temporal_filter.hlsl  temporal_filter.hlsl
shader/raytrace/: geometry.rchit.hlsl  geometry.rmiss.hlsl  geometry_ind.rchit.hlsl  geometry_ray.inc.hlsl  geometry_rchit.inc.hlsl  shadow.rmiss.hlsl  shadow_ray.hlsli
shader/restir/: config.inc.hlsl  debug_view.hlsl  final_lighting.hlsl  hash_grid.inc.hlsl  hash_grid_cache.inc.hlsl  hash_grid_cache_decay.hlsl  hash_grid_decay.hlsl  hash_grid_query_compact.hlsl  hash_grid_query_select.hlsl  hash_grid_radiance_update.hlsl  hash_grid_raygen.hlsl  hash_grid_visualize.hlsl  ind_diff_sample_gen.hlsl  ind_diff_sample_validate.hlsl  ind_diff_spatial_resample.hlsl  ind_diff_temporal_filter.hlsl  ind_diff_temporal_resample.hlsl  ind_spec_sample_gen.hlsl  ind_spec_sample_validate.hlsl  ind_spec_spatial_resample.hlsl  ind_spec_temporal_filter.hlsl  ind_spec_temporal_resample.hlsl  post_processing.hlsl  raytrace.hlsli  raytrace.inc.hlsl  raytraced_ao.hlsl  raytraced_ao_filter.hlsl  raytraced_ao_gen.hlsl  reservoir.hlsl  sample_gen.hlsl  sample_validate.hlsl  spatial_resampling.hlsl  temporal_resample.hlsl  validate.hlsl
shader/util/: clear_buffer.hlsl  clear_texture.hlsl
src/: app.rs  command_buffer.rs  gltf_asset.rs  gltf_loader.rs  gpu_profiling.rs  imgui.rs  lib.rs  main.rs  model.rs  render_device.rs  render_graph.rs  render_loop.rs  render_scene.rs  renderdoc.rs  shader.rs  window.rs
src/render_device/: buffer.rs  core.rs  debug_utils.rs  physical.rs  raytracing.rs  swapchain.rs  texture.rs
src/render_loop/: gbuffer_pass.rs  imgui_pass.rs  pbr_loop.rs  senga_loop.rs  util_passes.rs
violet-rs/: Cargo.toml
violet-rs/shader/: MeshVSPS.hlsl
violet-rs/src/: main.rs  window.rs
