[package]
name = "violet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Using ash from source, to get newest support (for vulkan dynamic_rendering)
ash = { git = "https://github.com/MaikKlein/ash", rev = "f0c743a" }
# Shader compilation runtime tools
shaderc = "0.7"
spirv-reflect = "0.2.3"

[dependencies.windows-sys]
version = "0.28.0"
features = [ 
	# Things for window
	"Win32_Foundation",
	"Win32_System",
	"Win32_System_LibraryLoader",
	"Win32_System_Diagnostics_Debug",
	"Win32_System_Memory_NonVolatile",
	"Win32_Graphics_Gdi",
	"Win32_UI_WindowsAndMessaging",
	"Win32_UI_Input_KeyboardAndMouse",
]
