[package]
name = "violet-app"
version = "0.1.0"
edition = "2021"

[features]
nightly = []

[dependencies]
violet = { path = "../violet" }
# CLI args parsing 
clap = { version = "4.4.7", features = ["derive"] }
# ImGUI
egui = "0.23"
# RenderDoc for graphics debugging
renderdoc-sys = "0.7"
# CPU profiling
puffin = "0.17"
puffin_egui = "0.23"
# Logging utils
colored = "2"
log = "0.4"

[dependencies.windows-sys]
version = "0.28.0"
features = [ 
	# Things for window
	"Win32_Foundation",
	"Win32_System",
	"Win32_System_LibraryLoader",
	"Win32_System_Diagnostics_Debug",
	"Win32_System_Memory_NonVolatile",
	"Win32_Graphics_Gdi",
	"Win32_UI_WindowsAndMessaging",
	"Win32_UI_Input_KeyboardAndMouse",
	"Win32_UI_Input_Ime",
	"Win32_UI_HiDpi",
]
